--- a/public/index.html
+++ b/public/index.html
@@ -26,13 +26,23 @@
 
     <!-- ====== Back To Top Start -->
     <a
-      href="javascript:void(0)"
+      onclick="scrollToTop()"
       class="back-to-top fixed bottom-8 right-8 left-auto z-[999] hidden h-10 w-10 items-center justify-center rounded-md bg-primary text-white shadow-md transition duration-300 ease-in-out hover:bg-dark"
     >
       <span
         class="mt-[6px] h-3 w-3 rotate-45 border-t border-l border-white"
       ></span>
     </a>
+    <script>
+      function scrollToTop() {
+        window.scrollTo({
+          top: 0,
+          behavior: "smooth",
+        });
+      }
+    </script>
+    
+
     <!-- ====== Back To Top End -->
 
     <script src="assets/js/main.js"></script>
